// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor /> should match snapshot with label, icon and to props 1`] = `
<a
  class="root"
  href="https://www.autoguru.com.au"
>
  <svg
    class="icon"
    size="16"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
    />
  </svg>
  <span
    class="root sizeScale4 alignLeft label"
  >
    Hello World!
  </span>
</a>
`;

exports[`<Anchor /> should match snapshot without label 1`] = `
<a
  class="root"
>
  <span
    class="root sizeScale4 alignLeft label"
  />
</a>
`;

exports[`<Anchor /> when custom component should match snapshot with label, icon custom component 1`] = `
<button
  class="root variantSecondary medium root"
  type="button"
>
  <div
    class="body"
  >
    <svg
      class="icon"
      size="16"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
      />
    </svg>
    <span
      class="root sizeScale4 alignLeft label"
    >
      Hello World!
    </span>
  </div>
</button>
`;
